# ai-analyzer-tg-bot

./: .env.example  .gitignore  DEPLOYMENT.md  Dockerfile  PROJECT_ANALYSIS.md  README.md  TESTING.md  TESTING_QUICK_START.md  pyproject.toml  railway.json  render.yaml  run_polling.py
app/: __init__.py  bot.py  config.py  main.py
app/handlers/: __init__.py  image.py  llm_text.py  text.py
app/utils/: __init__.py  classify.py  events.py  image_descriptions.py  llm.py
tests/: __init__.py  conftest.py  test_image_handler.py  test_llm_handler.py  test_text_handler.py
